<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/dark_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="62%"
            android:textColor="@color/light_green"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTop"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/shadow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_rounded_background"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:text="@string/current_challenge"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reward"
                android:textAllCaps="true"
                android:textColor="#B9B9B9"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#EDF1F1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/runner"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <FrameLayout
                    android:id="@+id/overlapImage2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/layoutBottom"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    >

                    <ProgressBar
                        android:id="@+id/performance_progress_bar2"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/smaller_progressbar"
                        android:rotation="270"/>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/bat_profile"
                        android:text="0%"
                        ></TextView>

                </FrameLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/win_coin"
                    android:textColor="#000000"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">


                <FrameLayout
                    android:id="@+id/overlapImage3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/layoutBottom"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    >

                    <ProgressBar
                        android:id="@+id/performance_progress_bar3"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="33"
                        android:progressDrawable="@drawable/smaller_progressbar"
                        android:rotation="270"/>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/bat_profile"
                        android:text="33%"
                        ></TextView>

                </FrameLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/collect_10_coin"
                    android:textColor="#000000"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">


                <FrameLayout
                    android:id="@+id/overlapImage5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/layoutBottom"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    >

                    <ProgressBar
                        android:id="@+id/performance_progress_bar5"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="80"
                        android:progressDrawable="@drawable/smaller_progressbar"
                        android:rotation="270"/>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/bat_profile"
                        android:text="80%"
                        ></TextView>

                </FrameLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/win_5_percent"
                    android:textColor="#000000"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">


                <FrameLayout
                    android:id="@+id/overlapImage1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/layoutBottom"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    >

                    <View
                        android:id="@+id/performance_progress_bar1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/filled_circle"
                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/ic_icons_check"
                        android:text="80%"
                        ></ImageView>

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/answer_10_question"
                    android:textColor="#000000"/>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutBottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="-130dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shadow">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shadow"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="UpComing Challenges"
                android:textAllCaps="true"
                android:textSize="14dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="#EDF1F1"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Wrestler"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="14dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="500 Coins"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="14dp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/cart"/>


            </FrameLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="Locked"
                android:textAllCaps="true"
                android:textSize="14dp"/>

        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/overlapImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/layoutBottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/circle_android">

        <ProgressBar
            android:id="@+id/performance_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="100"
            android:progress="64"
            android:progressDrawable="@drawable/custom_progress_bar"
            android:rotation="270"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:src="@drawable/bat_profile"
            app:civ_border_width="0dp"
            ></com.mikhaellopez.circularimageview.CircularImageView>

    </FrameLayout>

</RelativeLayout>